# urllib3.future

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  Dockerfile  FIPSOpenSSL.Dockerfile  LibreSSL.Dockerfile  OpenSSL.Dockerfile  README.md  StaticOpenSSL.Dockerfile  dev-requirements.txt  docker-compose.win.yaml  docker-compose.yaml  mypy-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  towncrier.toml  urllib3_future.pth
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codeql.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_feature_request.md  02_bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: changelog.yml  ci-dead-things.yml  ci.yml  codeql.yml  integration.yml  lint.yml  packaging.yml  publish.yml  scorecards.yml
changelog/: 1.feature.rst  16.bugfix.rst  17.bugfix.rst  18.bugfix.rst  20.bugfix.rst  22.misc.rst  23.feature.rst  26.bugfix.rst  28.feature.rst  333.bugfix.rst  335.bugfix.rst  344.bugfix.rst  354.bugfix.rst  377.bugfix.rst  379.bugfix.rst  8.bugfix.rst
ci/: 0001-Mark-100-Continue-tests-as-failing.patch  0003-Mark-HttpConn-bypass-internals-as-xfail.patch  0005-DockerPy-FixBadChunk.patch  0006-DockerPy-xfail-flaky-attach-no-stream.patch  0006-Requests-Qh3-IDNA.patch  run_dockerized.sh  run_fips_openssl.sh  run_legacy_libressl.sh  run_legacy_openssl.sh  run_static_openssl.sh
docs/: advanced-usage.rst  conf.py  contributing.rst  index.rst  user-guide.rst
dummyserver/: handlers.py  server.py  testcase.py
notes/: public-and-private-apis.md
src/urllib3/: __init__.py  _collections.py  _constant.py  _version.py  connection.py  connectionpool.py  exceptions.py  poolmanager.py  response.py
src/urllib3/_async/: connection.py  connectionpool.py  poolmanager.py  response.py
src/urllib3/backend/: _base.py  hface.py
src/urllib3/backend/_async/: _base.py  hface.py
src/urllib3/contrib/: _socks_legacy.py  _socks_override.py  socks.py
src/urllib3/contrib/anytls/: __init__.py  _backend.py
src/urllib3/contrib/hface/: _configuration.py  _stream_matrix.py
src/urllib3/contrib/hface/protocols/: _protocols.py
src/urllib3/contrib/hface/protocols/http1/: _h11.py
src/urllib3/contrib/hface/protocols/http2/: _h2.py
src/urllib3/contrib/hface/protocols/http3/: _qh3.py
src/urllib3/contrib/imcc/: __init__.py  _ctypes.py  _fifo.py  _shm.py
src/urllib3/contrib/resolver/: _cache.py  protocols.py  utils.py
src/urllib3/contrib/resolver/_async/: protocols.py
src/urllib3/contrib/resolver/_async/doh/: _urllib3.py
src/urllib3/contrib/resolver/_async/doq/: _qh3.py
src/urllib3/contrib/resolver/_async/dot/: _ssl.py
src/urllib3/contrib/resolver/_async/dou/: _socket.py
src/urllib3/contrib/resolver/_async/in_memory/: _dict.py
src/urllib3/contrib/resolver/doh/: _urllib3.py
src/urllib3/contrib/resolver/doq/: _qh3.py
src/urllib3/contrib/resolver/dou/: _socket.py
src/urllib3/contrib/resolver/in_memory/: _dict.py
src/urllib3/contrib/resolver/null/: __init__.py
src/urllib3/contrib/resolver/system/: _socket.py
src/urllib3/contrib/ssa/: __init__.py  _gro.py  _timeout.py
src/urllib3/contrib/webextensions/: protocol.py  raw.py  sse.py  ws.py
src/urllib3/contrib/webextensions/_async/: protocol.py  raw.py  sse.py  ws.py
src/urllib3/util/: connection.py  request.py  response.py  socket_state.py  ssl_.py  ssltransport.py  sub_timeout.py  traffic_police.py  url.py
src/urllib3/util/_async/: ssl_.py  traffic_police.py
test/: __init__.py  conftest.py  test_async_connectionpool.py  test_async_poolmanager.py  test_async_response.py  test_collections.py  test_connectionpool.py  test_ech.py  test_grouped_dict.py  test_no_zlib.py  test_poolmanager.py  test_response.py  test_retry.py  test_sse_parser.py  test_ssl.py  test_ssltransport.py  test_util.py  test_wait.py  tz_stub.py
test/contrib/: test_resolver.py  test_socks.py  test_websocket_fragmentation.py
test/contrib/asynchronous/: test_resolver.py
test/contrib/hface/: test_stream_matrix.py
test/with_dummyserver/: test_chunked_transfer.py  test_connection.py  test_connectionpool.py  test_https.py  test_poolmanager.py  test_proxy_poolmanager.py  test_socketlevel.py
test/with_dummyserver/asynchronous/: test_chunked_transfer.py  test_connection.py  test_connectionpool.py  test_https.py  test_poolmanager.py  test_proxy_poolmanager.py  test_socketlevel.py
test/with_traefik/: test_connection.py  test_connectionpool_multiplexed.py  test_poolmanager_multiplexed.py  test_protolevel.py  test_proxy.py  test_send_data.py  test_stream.py  test_svn.py  test_thread_safety.py  test_webextensions.py
test/with_traefik/asynchronous/: test_connection.py  test_connectionpool_multiplexed.py  test_poolmanager_multiplexed.py  test_protolevel.py  test_proxy.py  test_send_data.py  test_stream.py  test_svn.py  test_webextensions.py
traefik/: macos.sh  patched.Dockerfile
